<resources>

    <string name="app_name">MqttAndroid</string>
    <string name="port">Port</string>
    <string name="Message">Message</string>
    <string name="IP">IP</string>
    <string name="Send">Send</string>
    <string name="hello">Hello World, PushActivity!</string>
    <string name="target">Your Device Target:</string>
    <string name="stop_service">Stop Push Service</string>
    <string name="start_service">Start Push service</string>
    <string name="about">www.tokudu.com</string>
    <string name="btn_read">Receive Message</string>
    <string name="btn_push">Push Message</string>

</resources>